[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Tiles/Sky.png" type="Texture" id=3]
[ext_resource path="res://scenes/Music.tscn" type="PackedScene" id=4]

[node name="StartMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 158.0
margin_right = 662.0
margin_bottom = 442.0
size_flags_horizontal = 5
custom_constants/separation = 20

[node name="Sprite" type="Sprite" parent="CenterContainer/VBoxContainer"]
position = Vector2( -426, -189 )
scale = Vector2( 1.8, 1.04844 )
texture = ExtResource( 3 )
centered = false

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 0 )
rect_clip_content = true
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jump2D"
align = 1

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 300.0
margin_bottom = 98.0
action_mode = 0
text = "Continue"
clip_text = true

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 300.0
margin_bottom = 160.0
text = "New Game"

[node name="OptionButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 222.0
action_mode = 0
text = "Settings"
clip_text = true

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 300.0
margin_bottom = 284.0
text = "Quit"
clip_text = true

[node name="Music" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
